<resources>
    <string name="app_name">SurfaceTest</string>
    <string name="title_activity_surface">SurfaceActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="notification">Notification</string>
    <string name="surfacetest">SurfaceTest</string>
    <string name="five_chess">five_chess</string>
    <string name="animation">ANIMATION</string>
    <string name="title_activity_animation">AnimationActivity</string>
    <string name="jump_ball">JUMP BALL</string>
    <string name="title_activity_jump_ball">JumpBallActivity</string>
    <string name="title_activity_canvas_test">CanvasTestActivity</string>
    <string name="canvas_test">CANVAS_TEST</string>
</resources>
